Add custom exception handling for file validation errors